--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}سبد خرید شما | نوین{% endblock %}
+{% block title %}سبد خرید شما | لمون{% endblock %}
 
 {% block content %}
 <div class="bg-gray-50 min-h-screen py-10 lg:py-20 pt-24" dir="rtl">
