--- a/templates/products/detail.html
+++ b/templates/products/detail.html
@@ -191,7 +191,7 @@
                         </button>
 
                         <p class="text-center text-sm text-gray-500 border-t border-gray-100 pt-4">
-                            ارائه شده با گارانتی ۱۸ ماهه اصلی و ضمانت اصالت کالا
+{#                            ارائه شده با گارانتی ۱۸ ماهه اصلی و ضمانت اصالت کالا#}
                         </p>
                     </div>
                 </div>
