--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}فهرست محصولات | شرکت نوین{% endblock %}
+{% block title %}فهرست محصولات | شرکت لمون{% endblock %}
 
 {% block content %}
 <section id="all-products" class="py-20 bg-gray-50" dir="rtl">
@@ -9,7 +9,7 @@
 
         <div class="mb-12 text-center lg:text-right">
             <h2 class="text-4xl lg:text-5xl font-extrabold text-gray-900 mb-2">
-                محصولات نوین
+                محصولات
             </h2>
             <p class="text-xl text-gray-600">جدیدترین و محبوب‌ترین محصولات را اینجا ببینید.</p>
         </div>
