--- a/templates/accounts/become_seller.html
+++ b/templates/accounts/become_seller.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}ثبت اطلاعات شرکتی | شرکت نوین{% endblock %}
+{% block title %}ثبت اطلاعات شرکتی | شرکت لمون{% endblock %}
 
 {% block content %}
 <div class="min-h-screen flex items-center justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:px-8" dir="rtl">
