--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
             <div class="flex justify-between items-center h-20">
 
                 <a href="{% url 'store:home' %}" class="text-3xl font-black text-indigo-700 hover:text-indigo-900 transition duration-300 tracking-tighter">
-                    شرکت نوین
+                    Lemon
                 </a>
 
                 <div class="hidden md:flex items-center space-x-6 space-x-reverse h-full">
@@ -258,7 +258,7 @@
         <div class="mt-8 pt-4 flex flex-col md:flex-row justify-between items-center text-center">
 
             <p class="text-sm text-gray-500 order-2 md:order-1 mt-4 md:mt-0">
-                &copy; ۱۴۰۳ - تمامی حقوق مادی و معنوی متعلق به شرکت نوین می‌باشد.
+                &copy; ۱۴۰۳ - تمامی حقوق مادی و معنوی متعلق به شرکت لمون می‌باشد.
             </p>
 
             <div class="flex space-x-4 space-x-reverse order-1 md:order-2">
