--- a/templates/base.html
+++ b/templates/base.html
@@ -25,17 +25,17 @@
                     // پالت رنگی indigo که در کدهای قبلی استفاده کردیم
                     colors: {
                         'indigo': {
-                            '50': '#f0f3ff',
-                            '100': '#e0e7ff',
-                            '200': '#c7d2fe',
-                            '300': '#a5b4fc',
-                            '400': '#818cf8',
-                            '500': '#6366f1',
-                            '600': '#4f46e5',
-                            '700': '#4338ca',
-                            '800': '#3730a3',
-                            '900': '#312e81',
-                            '950': '#1e1b4b',
+'50': '#f7fee7',  // روشن‌ترین، ملایم‌ترین لیمویی
+    '100': '#ecfccb',
+    '200': '#d9f99d',
+    '300': '#bef264',
+    '400': '#a3e635',
+    '500': '#84cc16',  // رنگ اصلی و زنده لیمویی
+    '600': '#65a30d',
+    '700': '#4d7c0f',
+    '800': '#3f6212',
+    '900': '#365314',
+    '950': '#1a2e05',
                         }
                     }
                 }
