--- a/templates/base.html
+++ b/templates/base.html
@@ -200,7 +200,7 @@
 
             <div>
                 <a href="{% url 'store:home' %}" class="text-3xl font-black text-white tracking-tighter block mb-4">
-                    شرکت نوین
+                    شرکت لمون
                 </a>
                 <p class="text-gray-400 text-sm mb-6">
                     پیشرو در ارائه‌ی محصولات دیجیتال و فناوری‌های روز دنیا با گارانتی معتبر و پشتیبانی قوی.
