--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -9,7 +9,7 @@
 
         <div class="text-center">
             <svg class="mx-auto h-12 w-auto text-indigo-600" fill="currentColor" viewBox="0 0 24 24">
-                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15h2v-6h-2v6zm0-8h2V7h-2v2z"/>
+                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15h2v-6h-2v6zm0-8h2V7h-2v2z"></path>
             </svg>
             <h2 class="mt-6 text-3xl font-extrabold text-gray-900">
                 ورود به حساب کاربری
