--- a/templates/base.html
+++ b/templates/base.html
@@ -185,7 +185,7 @@
         <div class="flex flex-col lg:flex-row justify-between items-center bg-indigo-700 p-8 rounded-2xl shadow-2xl transform translate-y-6 lg:translate-y-10 mb-10 lg:mb-20">
             <div class="text-white text-center lg:text-right mb-6 lg:mb-0">
                 <h3 class="text-3xl font-extrabold mb-1">
-                    همین حالا عضو خانواده نوین شوید!
+                    همین حالا عضو خانواده لمون پارس شوید!
                 </h3>
                 <p class="text-indigo-200 text-lg">
                     با عضویت در خبرنامه، از تخفیف‌ها و محصولات جدید زودتر از همه باخبر شوید.
