--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>{% block title %}فروشگاه نوین{% endblock %}</title>
+    <title>{% block title %}فروشگاه لمون پارس{% endblock %}</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -58,7 +58,7 @@
                 <a href="{% url 'store:home' %}" class="flex items-center space-x-3 space-x-reverse transition duration-300">
                     <img src="{% static 'images/logo.png' %}" alt="لوگو شرکت Lemon" class="h-10 w-auto object-contain">
                     <span class="text-3xl font-black text-lime-700 hover:text-lime-900 transition duration-300 tracking-tighter">
-                        Lemon
+                        لمون پارس
                     </span>
                 </a>
 
