--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}فهرست محصولات | شرکت لمون{% endblock %}
+{% block title %} فهرست محصولات | شرکت لمون پارس{% endblock %}
 
 {% block content %}
 <section id="all-products" class="py-20 bg-gray-50" dir="rtl">
