--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}داشبورد کاربری | شرکت لمون{% endblock %}
+{% block title %}داشبورد کاربری | شرکت لمون پارس{% endblock %}
 
 {% block content %}
 <div class="min-h-screen bg-gray-50 flex" dir="rtl">
