--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}lemon | پیشرو در صادرات میوه و محصولات فروشگاهی{% endblock %}
+{% block title %} | پیشرو در صادرات میوه و محصولات فروشگاهی | لمون پارس{% endblock %}
 
 {% block content %}
 <main class="pt-20"> 
