--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -22,7 +22,7 @@
             </h3>
 
             <ul class="space-y-3 text-right">
-                {% if identity and identity.status == 'approved' %}
+                {% if identity.status == 'approved' %}
 <li>
     <a href="{% url 'store:product_create' %}"
        class="w-full inline-flex items-center justify-end px-4 py-3 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 transition duration-300 shadow-md">
