--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
 
 
     <header>
-    <nav class="bg-white shadow-xl fixed w-full z-30 top-0 border-b border-gray-100" dir="rtl">
+    <nav class="bg-white shadow-xl sticky w-full z-30 top-0 border-b border-gray-100" dir="rtl">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-20">
 
