--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -24,7 +24,7 @@
             <ul class="space-y-3 text-right">
                 {% if identity and identity.status == 'approved' %}
 <li>
-    <a href="{% url 'store:product_create' %}"
+    <a href="#"
        class="w-full inline-flex items-center justify-end px-4 py-3 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 transition duration-300 shadow-md">
         <span class="text-sm ml-2">اضافه کردن محصول جدید</span>
         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
