--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -97,7 +97,7 @@
                         ویرایش پروفایل
                     </a>
                 </div>
-
+            </div>
         </div>
     </main>
 </div>
