everything got changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
@@ -138,6 +139,9 @@
 
                     <a href="{% url 'store:product_list' %}" class="text-gray-700 hover:text-lime-600 font-medium transition duration-150 h-full flex items-center px-2">
                         محصولات
+                    </a>
+                    <a href="{% url 'store:faqs' %}" class="text-gray-700 hover:text-lime-600 font-medium transition duration-150 h-full flex items-center px-2">
+                        سوالات متدول
                     </a>
 
                     <div class="relative group h-full flex items-center">
