--- a/templates/products/product_create.html
+++ b/templates/products/product_create.html
@@ -17,12 +17,17 @@
                 <input name="name" type="text" required
                        class="w-full border rounded-lg p-2 focus:ring-2 focus:ring-blue-400" />
             </div>
+{#        slug#}
+        <input name="slug" type="text" value="" readonly
+       class="w-full border rounded-lg p-2 bg-gray-100 cursor-not-allowed" />
+        <script>
+const nameInput = document.querySelector('input[name="name"]');
+const slugInput = document.querySelector('input[name="slug"]');
 
-            <div>
-                <label class="block mb-1 font-medium">Slug</label>
-                <input name="slug" type="text" required
-                       class="w-full border rounded-lg p-2 focus:ring-2 focus:ring-blue-400" />
-            </div>
+nameInput.addEventListener('input', () => {
+    slugInput.value = nameInput.value.toLowerCase().replace(/\s+/g, '-');
+});
+</script>
 
             <div>
                 <label class="block mb-1 font-medium">دسته‌بندی</label>
