--- a/templates/base.html
+++ b/templates/base.html
@@ -216,6 +216,7 @@
             <div class="divide-y divide-gray-100">
                 <a href="{% url 'store:home' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">صفحه اصلی</a>
                 <a href="{% url 'store:product_list' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">همه ی محصولات</a>
+                <a href="{% url 'store:faqs:' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">سوالات متداول</a>
                 <a href="#" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">دسته‌بندی‌ها</a>
                 <a href="#about" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">درباره ما</a>
             </div>
@@ -310,7 +311,7 @@ z`
             <div>
                 <h4 class="text-lg font-bold text-white mb-4 border-b border-gray-700 pb-2">راهنمای مشتریان</h4>
                 <ul class="space-y-3">
-                    <li><a href="#" class="text-gray-400 hover:text-indigo-400 transition duration-150 text-sm">سوالات متداول (FAQ)</a></li>
+                    <li><a href="{% url 'store:faqs' %}" class="text-gray-400 hover:text-indigo-400 transition duration-150 text-sm">سوالات متداول (FAQ)</a></li>
                     <li><a href="#" class="text-gray-400 hover:text-indigo-400 transition duration-150 text-sm">شیوه های ارسال</a></li>
                     <li><a href="#" class="text-gray-400 hover:text-indigo-400 transition duration-150 text-sm">قوانین و مقررات</a></li>
                     <li><a href="#" class="text-gray-400 hover:text-indigo-400 transition duration-150 text-sm">رهگیری سفارش</a></li>
