--- a/templates/base.html
+++ b/templates/base.html
@@ -216,7 +216,7 @@
             <div class="divide-y divide-gray-100">
                 <a href="{% url 'store:home' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">صفحه اصلی</a>
                 <a href="{% url 'store:product_list' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">همه ی محصولات</a>
-                <a href="{% url 'store:faqs:' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">سوالات متداول</a>
+                <a href="{% url 'store:faqs' %}" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">سوالات متداول</a>
                 <a href="#" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">دسته‌بندی‌ها</a>
                 <a href="#about" class="block px-4 py-3 text-base text-gray-700 font-medium hover:bg-lime-50 hover:text-lime-600 transition duration-150">درباره ما</a>
             </div>
