--- a/templates/base.html
+++ b/templates/base.html
@@ -185,7 +185,7 @@
 
                 <div class="flex items-center space-x-4 space-x-reverse">
 
-                    <a href="{% url 'cart_home' %}">
+                    <a href="{% url 'cart:cart_home' %}">
                     <button class="p-2 text-gray-600 hover:text-lime-600 rounded-full transition duration-150 relative">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
                         <span class="absolute top-0 right-0 inline-flex items-center justify-center px-2 py-1 text-xs font-bold leading-none text-red-100 transform translate-x-1/2 -translate-y-1/2 bg-red-600 rounded-full">3</span>
